<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal" >

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortfolioActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/portfolio_title"
        android:id="@+id/portfolioTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/portfolio_title_botton_margin"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="@dimen/portfolio_button_margin_top"/>

    <Button
        android:layout_width="@dimen/portfolio_button_width"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/streamerButton"
        android:layout_gravity="center_horizontal"
        android:onClick="openStreamer"
        android:background="@drawable/portfolio_button_bg"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="@dimen/portfolio_button_width"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/scoresButton"
        android:layout_gravity="center_horizontal"
        android:onClick="openScores"
        android:background="@drawable/portfolio_button_bg"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/portfolio_button_margin_top"/>

    <Button
        android:layout_width="@dimen/portfolio_button_width"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/libraryButton"
        android:layout_gravity="center_horizontal"
        android:onClick="openLibrary"
        android:background="@drawable/portfolio_button_bg"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/portfolio_button_margin_top"/>

    <Button
        android:layout_width="@dimen/portfolio_button_width"
        android:layout_height="wrap_content"
        android:text="@string/build_it"
        android:id="@+id/buildBiggerButton"
        android:layout_gravity="center_horizontal"
        android:onClick="openBuildIt"
        android:background="@drawable/portfolio_button_bg"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/portfolio_button_margin_top"/>

    <Button
        android:layout_width="@dimen/portfolio_button_width"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/readerButton"
        android:layout_gravity="center_horizontal"
        android:onClick="openReader"
        android:background="@drawable/portfolio_button_bg"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/portfolio_button_margin_top"/>

    <Button
        android:layout_width="@dimen/portfolio_button_width"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstoneButton"
        android:layout_gravity="center_horizontal"
        android:onClick="openCapstone"
        android:layout_marginTop="@dimen/portfolio_button_margin_top"
        android:textColor="@android:color/white"
        android:background="@drawable/capstone_button_bg"/>

</LinearLayout>

</ScrollView>